fix(ui): restart job icons
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -23,7 +23,7 @@
               "src/assets",
               "src/favicon.ico",
               {
-                "glob": "*",
+                "glob": "**/*",
                 "input": "node_modules/@ant-design/icons-angular/src/inline-svg/",
                 "output": "/assets/"
               },
@@ -234,7 +234,7 @@
               "src/assets",
               "src/favicon.ico",
               {
-                "glob": "*",
+                "glob": "**/*",
                 "input": "node_modules/@ant-design/icons-angular/src/inline-svg/",
                 "output": "/assets/"
               },
