--- a/contrib/vscode-cds/webviews/workflow-preview/angular.json
+++ b/contrib/vscode-cds/webviews/workflow-preview/angular.json
@@ -31,7 +31,7 @@
             "assets": [
               "src/assets",
               {
-                "glob": "**/aim.*",
+                "glob": "**/*",
                 "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
                 "output": "/assets/"
               },
