--- a/tests/08_v2_sub_action.yml
+++ b/tests/08_v2_sub_action.yml
@@ -115,9 +115,21 @@ testcases:
                   id: action
                   env:
                     PARENT: FOO
+                - id: exportFile
+                  run: |
+                    echo "Hello" > myfile.log
+                    echo "World" >> myfile.log
+                    cat myfile.log | worker export myfile    
               outputs:
                 fromParent:
                   value: ${{ steps.action.outputs.parentOutFromChild }}
+                fromFile:
+                  value ${{ steps.exportFile.outputs.myfile }}  
+            second:
+              runs-on: .cds/worker-models/debian.yml
+              steps:
+               - run: echo "${{ jobs.init.outputs.fromFile }}"
+                 id: echo
 
     - name: Check CDS project analyses status
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
@@ -168,10 +180,12 @@ testcases:
         cat {{.cds_workflow}}-1-1-init-action | grep "Post from child-action"
         # Check Post parent action
         cat {{.cds_workflow}}-1-1-init-Post-action | grep "Post from parent-action"
+        # Check export from second job
+        cat {{.cds_workflow}}-1-1-second-echo | grep "Hello\nWorld"
       retry: 60
       delay: 1
 
     - name: Check that we have 1 run result of type variable
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=variable --format json"  
       assertions:
-      - result.systemoutjson ShouldHaveLength 1
+      - result.systemoutjson ShouldHaveLength 2
