--- a/tests/08_v2_sub_action.yml
+++ b/tests/08_v2_sub_action.yml
@@ -115,9 +115,22 @@ testcases:
                   id: action
                   env:
                     PARENT: FOO
+                - id: exportFile
+                  run: |
+                    echo "Hello" > myfile.log
+                    echo "World" >> myfile.log
+                    cat myfile.log | worker export myfile    
               outputs:
                 fromParent:
                   value: ${{ steps.action.outputs.parentOutFromChild }}
+                fromFile:
+                  value: ${{ steps.exportFile.outputs.myfile }}  
+            second:
+              needs: [init]
+              runs-on: .cds/worker-models/debian.yml
+              steps:
+               - run: echo "${{ jobs.init.outputs.fromFile }}"
+                 id: echo
 
     - name: Check CDS project analyses status
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
@@ -131,16 +144,24 @@ testcases:
     - name: Check that the CDS workflow has at least one execution and is Success
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
       assertions:
-        - result.systemoutjson ShouldHaveLength 1
-        - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
+        - and:
+          - result.systemoutjson ShouldHaveLength 1
+          - or: 
+            - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
+            - result.systemoutjson.systemoutjson0.status ShouldEqual "Fail"
       retry: 100
       delay: 1
       vars:
         workflowRunID:
           from: result.systemoutjson.systemoutjson0.id
+        workflowRunStatus:
+          from: result.systemoutjson.systemoutjson0.status  
 
     - name: Get Workflow run info
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow info {{.cds_project}} {{.workflowRunID}}"
+
+    - name: Get job info
+      script:  "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID}}"      
         
     - name: Download and check logs
       script: |-
@@ -168,10 +189,19 @@ testcases:
         cat {{.cds_workflow}}-1-1-init-action | grep "Post from child-action"
         # Check Post parent action
         cat {{.cds_workflow}}-1-1-init-Post-action | grep "Post from parent-action"
+        # Check export from second job
+        cat {{.cds_workflow}}-1-1-second-echo
+        cat {{.cds_workflow}}-1-1-second-echo | grep "Hello"
+        cat {{.cds_workflow}}-1-1-second-echo | grep "World"
       retry: 60
       delay: 1
 
     - name: Check that we have 1 run result of type variable
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=variable --format json"  
       assertions:
-      - result.systemoutjson ShouldHaveLength 1
+      - result.systemoutjson ShouldHaveLength 2
+    
+    - name: Echo Status
+      script: echo {{.workflowRunStatus}}
+      assertions:
+      - result.systemout ShouldEqual Success
