--- a/tests/08_v2_hook_workflow_run.yml
+++ b/tests/08_v2_hook_workflow_run.yml
@@ -99,6 +99,8 @@ testcases:
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo_to}} {{.cds_workflow_to}} --format json"
       assertions:
         - result.systemoutjson ShouldHaveLength 0
+      retry: 100
+      delay: 1  
         
 - name: PushFromWorkflow
   steps:
