feat(api,ui): download vscode plugin from api
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/contrib/vscode-cds/Makefile
+++ b/contrib/vscode-cds/Makefile
@@ -1,9 +1,10 @@
-DIST := dist
-
 .PHONY: clean package
 
-$(DIST):
-	mkdir -p $(DIST)
+VERSION := $(if ${CDS_VERSION},${CDS_VERSION},0.0.0-snapshot)
+TARGET_DIST := ./dist
+
+$(TARGET_DIST):
+	@mkdir -p $(TARGET_DIST)
 
 workflow-graph:
 	cd ../../ui && npm ci && npm run ng -- build workflow-graph
@@ -14,16 +15,14 @@ package-workflow-graph: workflow-graph
 webviews: package-workflow-graph
 	cd webviews/workflow-preview && npm install && npm run build
 
-build: $(DIST) webviews
-	npm install --include=dev
-	npm run vsce package
-	mv vscode-cds-*.vsix $(DIST)
+plugin: $(TARGET_DIST)
+	npm ci
+	npm run vsce -- package $(VERSION) --no-update-package-json -o $(TARGET_DIST)/vscode-cds.vsix
 
-package: $(TARGET_DIST) build
-	cp -f $(DIST)/vscode-cds-*.vsix $(TARGET_DIST)
+build: webviews plugin
 
 clean:
-	rm -f $(DIST)/vscode-cds-*.vsix
+	rm -rf ./dist-web ./out $(TARGET_DIST)
 
 install:
-	code --install-extension $(DIST)/vscode-cds-*.vsix
+	code --install-extension $(TARGET_DIST)/vscode-cds.vsix --force
