--- a/contrib/vscode-cds/package.json
+++ b/contrib/vscode-cds/package.json
@@ -5,7 +5,7 @@
   "description": "CDS VSCode Extension",
   "version": "0.0.0",
   "engines": {
-    "vscode": "1.93.1"
+    "vscode": "^1.93.1"
   },
   "repository": {
     "url": "https://github.com/ovh/cds"
